# EasyPR

./: CMakeLists.txt  README.md
RECG/: img.data
src/: dependences.out  dependences.py  easypr.c  main.c  main.cpp  main.cpp.back
src/core/: debug.c  global.c  plate.c  pr.c
src/include/: debug.h  global.h  plate.h  pr.h  prep.h  type.h
util/: JPEG2RGB.py  RGB2JPEG.py
